nginx1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx1
  name: nginx1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx1
  template:
    metadata:
      labels:
        app: nginx1
    spec:
      containers:
      - image: nginx:alpine
        name: nginx
        lifecycle:
            postStart:
              exec:
                command: ["/bin/sh", "-c", "echo nginx1 > /usr/share/nginx/html/index.html"]
