nginx-ingress-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: ingress-svc
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    nodePort: 30080
  selector:
    name: nginx-ingress
  type: NodePort
