ingress-resource.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource
  namespace: default 
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: nginx1 
            port:
              number: 80
        path: /nginx1
        pathType: Exact
      - backend:
          service:
            name: nginx2
            port:
              number: 80
        path: /nginx2
        pathType: Exact
